# netcatr

./: Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
scripts/: release-version.sh
src/: banner.rs  input.rs  main.rs  unixshell.rs
src/listener/: mod.rs
